# local_commit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  run.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: install.ps1  install.sh
src/local_commit/: __init__.py  __main__.py  cli.py  colors.py  config.py  git_utils.py  grouping.py  llm.py
tests/: test_git_utils.py  test_grouping.py
